[project]
name = "canonicalize-psmiles"
version = "0.1.2"
description = "Canonicalize PSMILES strings."
authors = [{ name = "Christopher Kuenneth", email = "christopher.kuenneth@gmail.com" }]
requires-python = ">=3.7,<4"
readme = "README.md"
dependencies = ["rdkit>=2022.3.5"]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "ipykernel>=6.15.2,<7",
    "black>=22.8.0,<23",
]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
